# i.s.compat.table

./: .editorconfig  .gitignore  .shellcheckrc  CONTRIBUTING.md  LICENSE  Makefile  README.md  compose.yaml  docker-compose.yaml  flake.nix  go.mod  go.sum  pyproject.toml  schema.json
.github/workflows/: pages.yaml  scrape.yaml
cmd/clickhouse/observe/: main.go
cmd/cockroachdb/scrape_docs/: main.go
cmd/observe_mariadb/: main.go
cmd/observe_postgres/: main.go
cmd/scrape_mariadb_docs/: main.go
cmd/scrape_mssql_docs/: main.go
cmd/scrape_postgres_docs/: main.go
dagger/: go.mod  main.go  postgres.go
data/: columns.tsv
data/clickhouse/: columns.tsv
data/cockroachdb/: columns.tsv
data/information_schema/: check_constraints.yaml  columns.tsv  columns.yaml  mariadb.tsv  mssql.tsv  pg.tsv  referential_constraints.yaml  snowflakedb.tsv  table_columns.tsv  tables.yaml
data/mariadb/: columns.tsv
data/mssql/: columns.tsv
data/mysql/: columns.tsv
data/postgres/: columns.tsv  patch.sql
data/tidb/: columns.tsv
data/trino/: columns.tsv
internal/observer/: columns.sql  observer.go
internal/schema/: db.go  views.sql
internal/utils/: utils.go
nix/: filter_filesets.nix
pkg/observer/: observer.go
pkg/schema/: db.go  db.sql  views.sql
scripts/: assemble.sh  common.sh  db.sql  dump_tsv.sh  get_mermaid_erd.py  mariadb_extract.sh  mssql_extract.sh  patch_docs.sh  pg_extract.sh
scripts/merge/: dbs.sh  merge.sql
website/: .editorconfig  .prettierrc  package.json  pnpm-lock.yaml  svelte.config.js  views.sql
website/static/: columns.tsv
(+63 files in other folders)
