[tool.poetry]
name = "i.s.compat.table"
version = "0.0.0"
description = "information_schema compatibility tables"
authors = ["Steven Kalt <kalt.steven@gmail.com>"]
license = "BSD 3-clause"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
cogapp = "^3.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
